Fix 'slice' aspect ratio calculation https://bugs.webkit.org/show_bug.cgi?id=99984

Patch by Branimir Lambov <blambov@google.com> on 2013-02-19
Reviewed by Dirk Schulze.

Source/WebCore:

Previously the calculation for the 'slice' aspect ratio would incorrectly calculate the
source rect location based on the destination rect offset. This caused our source rect to be
incorrect, and sometimes render outside the visible area completely. After this patch
our implementation matches the implementation of both Gecko and Presto.

The relevant spec section:
http://www.w3.org/TR/SVG/single-page.html#coords-PreserveAspectRatioAttribute

Tests: svg/as-image/image-preserveAspectRatio-all.svg
       svg/filters/feImage-preserveAspectRatio-all.svg

* svg/SVGPreserveAspectRatio.cpp:
(WebCore::SVGPreserveAspectRatio::transformRect):

LayoutTests:

* platform/chromium/TestExpectations:
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/mac/TestExpectations:
* platform/qt/TestExpectations:
* svg/as-image/image-preserveAspectRatio-all-expected.png: Added.
* svg/as-image/image-preserveAspectRatio-all-expected.txt: Added.
* svg/as-image/image-preserveAspectRatio-all.svg: Added.
* svg/filters/feImage-preserveAspectRatio-all-expected.png: Added.
* svg/filters/feImage-preserveAspectRatio-all-expected.txt: Added.
* svg/filters/feImage-preserveAspectRatio-all.svg: Added.


Canonical link: https://commits.webkit.org/128571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143389 268f45cc-cd09-0410-ab3c-d52691b4dbfc